--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "leo",
-  "version": "1.0.0",
-  "description": "this is very nb",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/traverse": "^7.22.8"
-  },
-  "dependencies": {
-    "@babel/parser": "^7.22.7"
-  }
+    "name": "leo",
+    "version": "1.0.0",
+    "description": "this is very nb",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/traverse": "^7.22.8",
+        "@babel/parser": "^7.22.7"
+    }
 }
